--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
 <html>
 
 <body>
-    <p>This is an image</p>
+    <p>Click to submit a photo</p>
     <form action="/upload" method="POST">
-        <input type="file" name="file" />
         <input type="submit" />
     </form>
-
-    <h3>Upload: {{ upload }}<h3>
 
 </body>
 
